[tool.poetry]
name = "vin"
version = "0.1.0"
description = "Etiquetador de fondos de escritorio"
authors = ["Asmilex <andresmm@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
