[tool.poetry]
name = "vin"
version = "0.1.0"
description = "Etiquetador de fondos de escritorio"
authors = ["Asmilex <andresmm@outlook.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
taskipy = "^1.9.0"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
tests = "python -m pytest"
check = "python -m compileall ./vin/*.py"
