[tool.poetry]
name = "vin"
version = "0.1.0"
description = "Etiquetador de fondos de escritorio"
authors = ["Asmilex <andresmm@outlook.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pytest = "^6.2.5"
opencv-python = "^4.5.4.58"
black = "^21.11b1"
loguru = "^0.5.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
taskipy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "python -m pytest"
check = "python -m compileall ./vin/*.py"
lint = "black ./vin -l 120"
